# job-orchestra

./: .gitignore  CHANGELOG.md  README.md  environment.yml  pyproject.toml
docs/: pasta_recipe.ipynb
src/job_orchestra/: __init__.py  pipeline.py
src/orchestra/: pipeline.py
tests/: pipeline_test.py
