[tool.poetry]
name = "orchestra"
version = "1.1.0"
description = "The pipeline orchestration framework for data science workflows"
authors = ["Tommaso Alfonsi"]
readme = "README.md"
license = "MIT License"
homepage = "https://github.com/tomalf2/orchestra/"
repository = "https://github.com/tomalf2/orchestra/"
keywords = ["orchestration", "pipeline"]
include = [
    "LICENSE",
]


[tool.poetry.dependencies]
cleverdict = "1.8.1"
flatdict = "^4.0.1"
pathvalidate = "^3.2.1"
pyarrow = "^18"
fastjsonschema = "^2.20"
python = "^3.11"
scikit-learn = "^1.6"
pandas = "^2.2"
numpy = "^2.1"
dagviz = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core>=1.9"]
build-backend = "poetry.core.masonry.api"
