[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "job-orchestra"
version = "1.1.2"
description = "The pipeline orchestration framework for data science workflows"
authors = [{name = "Tommaso Alfonsi"}]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["orchestration", "pipeline"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.11"
dependencies = [
    "cleverdict>=1.9.2",
    "dagviz>=0.4.0",
    "fastjsonschema>=2.21.1",
    "flatdict>=4.0.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pathvalidate>=3.2.3",
    "pyarrow>=19.0.1",
    "scikit-learn>=1.6.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[project.urls]
Homepage = "https://github.com/tomalf2/job-orchestra/"
Source = "https://github.com/tomalf2/job-orchestra/"

[tool.hatch.build]
packages = ["src/job_orchestra"]  # the actual package name(s) when doing import package_name
include = [
    "src",      # .gitignore is always included by hatchlings and cannot be excluded
    "README.*",
    "pyproject.toml",
    "LICENSE",
    "CHANGELOG.*",
]
exclude = [
    # everything included in the .gitgnore +
]

#[tool.hatch.build.targets.sdist]
#exclude = [
#  ".*",
#  ".gitignore",
#  "*.yml",
#  "docs",
#  "tests",
#  "dist",
#]

#[tool.hatch.build.targets.wheel]
#packages = ["src/job_orchestra"]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
publish-url = "https://upload.pypi.org/legacy/"
default = true

#[[tool.uv.index]]
#name = "testpypi"
#url = "https://test.pypi.org/simple/"
#publish-url = "https://test.pypi.org/legacy/"